--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -2,7 +2,8 @@
 <%= @route.starting_dock %>
 <%= @route.ending_system%>
 <%= @route.ending_dock %>
-<%= @route.distance %>
+<%= @route.jump_distance %>
+<%= @route.dock_distance %>
 <%= @route.commodity %>
 <%= @route.buy_price %>
 <%= @route.sell_price %>
