--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -193,7 +193,8 @@ body#background {
   -moz-box-shadow: none !important;
   box-shadow: none !important;
   color: $ed-orange;
-  padding: 0 0 0 0;
+  padding: 3px 0 3px 15px;
+  width: 100%;
 }
 .route-input-submit {
   font-size: 16px;
