Add cargo capacity to Routes

--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -69,10 +69,10 @@
         <%= f.input_field :commodity, placeholder: 'Commodity Purchased' %>
       </div>
       <div class="route-input-label">
-        &nbsp
+        Cargo Capacity:
       </div>
-      <div class="route-input-label">
-        &nbsp
+      <div class="route-input-cell">
+        <%= f.input_field :cargo_capacity, placeholder: '12' %>
       </div>
     </div>
     <div class="row">
