--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -34,7 +34,7 @@
         &nbsp
       </div>
       <div class="route-right-cell">
-        Cargo: 16 Profit: 1500
+        Cargo: <%= route.cargo_capacity %> Profit: 1500
       </div>
     </div>
   </div>
