--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,43 @@
-<div class="authform">
+<div class="route">
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
-    <h3>Sign up</h3>
     <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+    <div class="row">
+      <div class="col-xs-12 route-highlight-cell text-center">
+        Create System Credentials
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+    <div class="row">
+      <div class="route-input-label">
+        Email Address:
+      </div>
+      <div class="route-input-cell">
+        <%= f.email_field :email, placeholder: "user@email.com" %>
+      </div>
+      <div class="route-input-label">
+        Commander Callsign:
+      </div>
+      <div class="route-input-cell">
+        <%= f.text_field :name, placeholder: "Maverick" %>
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+    <div class="row">
+      <div class="route-input-label">
+        Password:
+      </div>
+      <div class="route-input-cell">
+        <%= f.password_field :password %>
+      </div>
+      <div class="route-input-label">
+        Password Confirmation:
+      </div>
+      <div class="route-input-cell">
+        <%= f.password_field :password_confirmation %>
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    <div class="row">
+      <div class="col-xs-12 route-input-cell route-input-submit border-top clear-padding">
+        <%= f.submit 'Sign up' %>
+      </div>
     </div>
-     <%= f.submit 'Sign up', :class => 'button right' %>
   <% end %>
 </div>
