Add route_profit to Route index view and replace placeholder data

--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -34,7 +34,7 @@
         &nbsp
       </div>
       <div class="route-right-cell">
-        Cargo: <%= route.cargo_capacity %> Profit: 1500
+        Cargo: <%= route.cargo_capacity %> Profit: <%= route.route_profit %>
       </div>
     </div>
   </div>
